--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<li><a href="buy-sell.html">TOKENOMICS</a></li>
 							<li><a href="wallet-features.html">FAQ</a></li>
 							<li><a href="market-data.html">ROAD MAP</a></li>
-							<li><a href="contact.html">Whitepaper</a></li>
+							<li><a href="whitepaperpdf.pdf">Whitepaper</a></li>
 							<li class="quote-btn hidden-xs hidden-sm"><a class="btn" href="contact.html">Earn Doge</a></li>
 						</ul>
 					</nav>
@@ -316,17 +316,17 @@
 						<div class="box-alt">
 							<span class="pe pe-7s-server"></span>
 							<h4>Buy</h4>
-							<p>8%</p>
+							<p>-6%</p>
 						</div>
 						<div class="box-alt">
 							<span class="pe pe-7s-airplay"></span>
 							<h4>Sell</h4>
-							<p>8%</p>
+							<p>-6%</p>
 						</div>
 						<div  class="box-alt">
 							<span class="pe pe-7s-graph"></span>
 							<h4>Doge Coin(reflection)</h4>
-							<p>2%</p>
+							<p>1%</p>
 						</div>
 					</div>
 					<div class="col-md-4 res-m-bttm-lg">
@@ -345,7 +345,7 @@
 						<div  class="box-alt">
 							<span class="pe pe-7s-graph1"></span>
 							<h4>Liquidity </h4>
-							<p>2%</p>
+							<p>2j;%</p>
 						 
 						</div>
 						<div class="box-alt">
@@ -415,7 +415,7 @@
        					<div class="testimonial-carousel has-carousel" data-items="1" data-loop="true" data-dots="true" data-auto="true">
        						<div class="testimonial-item">
        							<div class="client-photo circle">
-       								<img src="images/1234.png" alt="client">
+       								<img src="images/chichidoge12.png" alt="client">
        								<em class="fa fa-quote-right"></em>
        							</div>
        							<blockquote>$CHICHIDOGE is a dedicated team consisting of 3 developers with several others serving on the marketing and design team.</blockquote>
@@ -426,7 +426,7 @@
        						</div>
        						<div class="testimonial-item">
        							<div class="client-photo circle">
-       								<img src="images/1234.png" alt="client">
+       								<img src="images/chichidoge12.png" alt="client">
        								<em class="fa fa-quote-right"></em>
        							</div>
        							<blockquote>Ours vision is to make the cryptocurrency market a safer place for all investors.Team will DOXXED after launch.</blockquote>
